seaqt/QtWidgets/gen_qlistwidget.h

typedef struct QDragLeaveEvent QDragLeaveEvent;
typedef struct QDragMoveEvent QDragMoveEvent;
typedef struct QDropEvent QDropEvent;
typedef struct QEvent QEvent;
typedef struct QItemSelection QItemSelection;
typedef struct QItemSelectionModel QItemSelectionModel;
typedef struct QListWidget QListWidget;
typedef struct QListWidgetItem QListWidgetItem;
typedef struct QMimeData QMimeData;
typedef struct QModelIndex QModelIndex;
typedef struct QMouseEvent QMouseEvent;
typedef struct QPaintEvent QPaintEvent;
typedef struct QPoint QPoint;
typedef struct QRect QRect;
typedef struct QRegion QRegion;
typedef struct QResizeEvent QResizeEvent;
typedef struct QStyleOptionViewItem QStyleOptionViewItem;
typedef struct QTimerEvent QTimerEvent;
typedef struct QWheelEvent QWheelEvent;
void QListWidget_connect_itemClicked(QListWidget* self, intptr_t slot);
void QListWidget_itemDoubleClicked(QListWidget* self, QListWidgetItem* item);
void QListWidget_connect_itemDoubleClicked(QListWidget* self, intptr_t slot);
void QListWidget_itemActivated(QListWidget* self, QListWidgetItem* item);
void QListWidget_connect_itemActivated(QListWidget* self, intptr_t slot);
void QListWidget_itemEntered(QListWidget* self, QListWidgetItem* item);
void QListWidget_connect_itemEntered(QListWidget* self, intptr_t slot);
void QListWidget_itemChanged(QListWidget* self, QListWidgetItem* item);
void QListWidget_connect_itemChanged(QListWidget* self, intptr_t slot);
void QListWidget_currentItemChanged(QListWidget* self, QListWidgetItem* current, QListWidgetItem* previous);
void QListWidget_connect_currentItemChanged(QListWidget* self, intptr_t slot);
void QListWidget_currentTextChanged(QListWidget* self, struct miqt_string currentText);
void QListWidget_connect_currentTextChanged(QListWidget* self, intptr_t slot);
void QListWidget_currentRowChanged(QListWidget* self, int currentRow);
void QListWidget_connect_currentRowChanged(QListWidget* self, intptr_t slot);
void QListWidget_itemSelectionChanged(QListWidget* self);
void QListWidget_connect_itemSelectionChanged(QListWidget* self, intptr_t slot);
struct miqt_string QListWidget_tr2(const char* s, const char* c);
struct miqt_string QListWidget_tr3(const char* s, const char* c, int n);
void QListWidget_sortItems1(QListWidget* self, int order);
void QListWidget_scrollToItem2(QListWidget* self, QListWidgetItem* item, int hint);
bool QListWidget_override_virtual_setSelectionModel(void* self, intptr_t slot);
void QListWidget_virtualbase_setSelectionModel(void* self, QItemSelectionModel* selectionModel);
bool QListWidget_override_virtual_dropEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_dropEvent(void* self, QDropEvent* event);
bool QListWidget_override_virtual_event(void* self, intptr_t slot);
bool QListWidget_virtualbase_event(void* self, QEvent* e);
bool QListWidget_override_virtual_mimeTypes(void* self, intptr_t slot);
struct miqt_array /* of struct miqt_string */  QListWidget_virtualbase_mimeTypes(const void* self);
bool QListWidget_override_virtual_mimeData(void* self, intptr_t slot);
QMimeData* QListWidget_virtualbase_mimeData(const void* self, struct miqt_array /* of QListWidgetItem* */  items);
bool QListWidget_override_virtual_dropMimeData(void* self, intptr_t slot);
bool QListWidget_virtualbase_dropMimeData(void* self, int index, QMimeData* data, int action);
bool QListWidget_override_virtual_supportedDropActions(void* self, intptr_t slot);
int QListWidget_virtualbase_supportedDropActions(const void* self);
bool QListWidget_override_virtual_visualRect(void* self, intptr_t slot);
QRect* QListWidget_virtualbase_visualRect(const void* self, QModelIndex* index);
bool QListWidget_override_virtual_scrollTo(void* self, intptr_t slot);
void QListWidget_virtualbase_scrollTo(void* self, QModelIndex* index, int hint);
bool QListWidget_override_virtual_indexAt(void* self, intptr_t slot);
QModelIndex* QListWidget_virtualbase_indexAt(const void* self, QPoint* p);
bool QListWidget_override_virtual_doItemsLayout(void* self, intptr_t slot);
void QListWidget_virtualbase_doItemsLayout(void* self);
bool QListWidget_override_virtual_reset(void* self, intptr_t slot);
void QListWidget_virtualbase_reset(void* self);
bool QListWidget_override_virtual_setRootIndex(void* self, intptr_t slot);
void QListWidget_virtualbase_setRootIndex(void* self, QModelIndex* index);
bool QListWidget_override_virtual_scrollContentsBy(void* self, intptr_t slot);
void QListWidget_virtualbase_scrollContentsBy(void* self, int dx, int dy);
bool QListWidget_override_virtual_dataChanged(void* self, intptr_t slot);
void QListWidget_virtualbase_dataChanged(void* self, QModelIndex* topLeft, QModelIndex* bottomRight, struct miqt_array /* of int */  roles);
bool QListWidget_override_virtual_rowsInserted(void* self, intptr_t slot);
void QListWidget_virtualbase_rowsInserted(void* self, QModelIndex* parent, int start, int end);
bool QListWidget_override_virtual_rowsAboutToBeRemoved(void* self, intptr_t slot);
void QListWidget_virtualbase_rowsAboutToBeRemoved(void* self, QModelIndex* parent, int start, int end);
bool QListWidget_override_virtual_mouseMoveEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_mouseMoveEvent(void* self, QMouseEvent* e);
bool QListWidget_override_virtual_mouseReleaseEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_mouseReleaseEvent(void* self, QMouseEvent* e);
bool QListWidget_override_virtual_wheelEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_wheelEvent(void* self, QWheelEvent* e);
bool QListWidget_override_virtual_timerEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_timerEvent(void* self, QTimerEvent* e);
bool QListWidget_override_virtual_resizeEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_resizeEvent(void* self, QResizeEvent* e);
bool QListWidget_override_virtual_dragMoveEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_dragMoveEvent(void* self, QDragMoveEvent* e);
bool QListWidget_override_virtual_dragLeaveEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_dragLeaveEvent(void* self, QDragLeaveEvent* e);
bool QListWidget_override_virtual_startDrag(void* self, intptr_t slot);
void QListWidget_virtualbase_startDrag(void* self, int supportedActions);
bool QListWidget_override_virtual_initViewItemOption(void* self, intptr_t slot);
void QListWidget_virtualbase_initViewItemOption(const void* self, QStyleOptionViewItem* option);
bool QListWidget_override_virtual_paintEvent(void* self, intptr_t slot);
void QListWidget_virtualbase_paintEvent(void* self, QPaintEvent* e);
bool QListWidget_override_virtual_horizontalOffset(void* self, intptr_t slot);
int QListWidget_virtualbase_horizontalOffset(const void* self);
bool QListWidget_override_virtual_verticalOffset(void* self, intptr_t slot);
int QListWidget_virtualbase_verticalOffset(const void* self);
bool QListWidget_override_virtual_moveCursor(void* self, intptr_t slot);
QModelIndex* QListWidget_virtualbase_moveCursor(void* self, int cursorAction, int modifiers);
bool QListWidget_override_virtual_setSelection(void* self, intptr_t slot);
void QListWidget_virtualbase_setSelection(void* self, QRect* rect, int command);
bool QListWidget_override_virtual_visualRegionForSelection(void* self, intptr_t slot);
QRegion* QListWidget_virtualbase_visualRegionForSelection(const void* self, QItemSelection* selection);
bool QListWidget_override_virtual_selectedIndexes(void* self, intptr_t slot);
struct miqt_array /* of QModelIndex* */  QListWidget_virtualbase_selectedIndexes(const void* self);
bool QListWidget_override_virtual_updateGeometries(void* self, intptr_t slot);
void QListWidget_virtualbase_updateGeometries(void* self);
bool QListWidget_override_virtual_isIndexHidden(void* self, intptr_t slot);
bool QListWidget_virtualbase_isIndexHidden(const void* self, QModelIndex* index);